dmg share fix again

--- a/templates/player_stats.html
+++ b/templates/player_stats.html
@@ -46,6 +46,7 @@
  <li id = 'loss'></li>
  <li id = 'wr'></li>
  <li id = 'cs'></li>
+ <li id ='dmg'></li>
  <li id ='kda'></li>
  <li id = 'fb'></li>
  
